fixed search bar height and changed background color for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,16 +155,17 @@ body {
 }
 
 .sidebar .search-contact {
-    background-color: #FBFBFB;
-    /* width: 34%; */
+    background-color: #f1f1f1;
     display: flex;
     padding: 3px 7px;
     height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .sidebar .search-contact input {
     width: 413px;
-    height: 44px;
+    height: 40px;
     border: none;
     border-bottom: 1px solid #E2E2E2;
     border-right: 1px solid #E2E2E2;
@@ -180,7 +181,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 44px;
+    height: 40px;
     width: 95px;
     color: #D4D6D7;
     background-color: white;
